--- a/assets/css/fontello.css
+++ b/assets/css/fontello.css
@@ -68,3 +68,4 @@
 .icon-help:before { content: '\f128'; } /* '' */
 .icon-info:before { content: '\f129'; } /* '' */
 .icon-bell-off:before { content: '\f1f6'; } /* '' */
+.icon-info:before { content: '\e800'; } /* '' */
