--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -636,14 +636,14 @@ table th {
     background-color: #337ab7 !important;
     color: white;
 }
-table>tbody>tr>td {
+/* table>tbody>tr>td {
     vertical-align: middle !important;
-}
+} */
 
 /*para alinear los botones y cuadro de busqueda*/
-.btn-group, .btn-group-vertical {
+/* .btn-group, .btn-group-vertical {
     position: absolute !important;
-}
+} */
 
 
 
